01-OIDC/_openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-playground
  labels:
    app: oidc-playground
    app.kubernetes.io/name: oidc-playground
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: rhbk-playground
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-playground
  template:
    metadata:
      labels:
        app: oidc-playground
        app.kubernetes.io/name: oidc-playground
    spec:
      containers:
        - name: oidc-playground
          image: quay.io/jnyilimbibi/oidc-playground:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
