01-OIDC/_openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oidc-playground
  labels:
    app: oidc-playground
    app.kubernetes.io/name: oidc-playground
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: rhbk-playground
spec:
  to:
    kind: Service
    name: oidc-playground
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
